# dnf-repofile

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml
docs/superpowers/plans/: 2026-05-18-dnf-repofile-plan.md
docs/superpowers/specs/: 2026-05-18-dnf-repofile-design.md
examples/: parse-and-modify.rs  reposdir-management.rs
src/: builder.rs  diff.rs  error.rs  lib.rs  mainconfig.rs  repo.rs  repofile.rs  reposdir.rs  types.rs  validate.rs  variables.rs
tests/: builder_tests.rs  comprehensive_tests.rs  diff_tests.rs  error_tests.rs  integration_tests.rs  mainconfig_tests.rs  repo_tests.rs  repofile_tests.rs  reposdir_tests.rs  types_tests.rs  validate_tests.rs  variables_tests.rs
tests/fixtures/: complex.repo  simple.repo
