[package]
name = "dnf-repofile"
version = "0.1.0"
edition = "2021"
rust-version = "1.82"
description = "Pure Rust library for parsing, managing, validating, diffing, and rendering DNF/YUM .repo configuration files"
license = "MIT"
repository = "https://github.com/franckcl1989/dnf-repofile"
readme = "README.md"
keywords = ["dnf", "yum", "rpm", "repository", "parser"]
categories = ["config", "parsing"]
documentation = "https://docs.rs/dnf-repofile"

[dependencies]
indexmap = "2"
url = { version = "2", features = ["serde"] }
camino = "1"
nutype = { version = "0.6", features = ["regex"] }
regex = "1"
derive_more = { version = "1", features = ["display", "as_ref", "deref", "from"] }
thiserror = "2"

[dev-dependencies]
tempfile = "3"
